--- a/src/page/home/home.css
+++ b/src/page/home/home.css
@@ -61,6 +61,19 @@ gap: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #e6e9eb;
-  color: #585858;
+  background: #c3c3c3;
+  color: #e6e9eb;
+}.iinfo{
+  position: fixed;
+  bottom: 90px;
+  right: 25px;
+  border: 2px solid #e6e9eb;
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #c3c3c3;
+  color: #e6e9eb;
 }
